# terraform-local

./: .gitignore  Dockerfile  Makefile  README.md  setup.cfg
.github/workflows/: build.yml
tests/: conftest.py  test_apply.py
