[metadata]
name = terraform-local
version = 0.25.0
url = https://github.com/localstack/terraform-local
author = LocalStack Team
author_email = info@localstack.cloud
description = Thin wrapper script to run Terraform against LocalStack
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache License 2.0
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    License :: OSI Approved :: Apache Software License
    Topic :: Software Development :: Testing

[options]
zip_safe = False
scripts =
    bin/tflocal
    bin/tflocal.bat
packages = find:

install_requires =
    localstack-client
    python-hcl2!=7.3.0
    packaging

[options.extras_require]
test =
    flake8
    localstack
    pytest

[options.packages.find]
exclude =
    tests*
